Header alignment fix

--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,31 @@ p {
     width: 100%;
     height: 100px;
     padding: 0 50px 0 50px;
-    background-color: white;
 }
 
 .header a {
-    color: black;
+    color: white;
     text-decoration: none;
+    transition: 0.2s;
+}
 
+.header a:hover {
+    color: rgb(188, 188, 188);
+    transition: 0.2s;
+}
+
+.header_nav {
+    display: flex;
+    gap: 20px;
 }
 
 .header img {
     width: 100px;
+    filter: invert();
+}
+
+.header img:hover {
+    filter: blur();
 }
 .promo {
     width: 100%;
